# adafruit-beaglebone-io-python

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
Adafruit_BBIO/: Encoder.py  sysfs.py
docs/: conf.py
overlays/: builder.py
source/examples/python/: blinkLEDs.py  button.py  gpio.py  i2cmatrix.py  i2ctmp101.py  leds.py  pwm.old.py  pwm.py
test/: issue170-pwm.py  issue178.py  start_all_pwm.py  test_adc.py  test_gpio_input.py  test_gpio_output.py  test_gpio_setup.py  test_led.py  test_pwm_setup.py  test_spi.py  test_uart.py
